<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_bill_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:id="@+id/dialog_edit_bill_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:hint="@string/dialog_hint_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/dialog_edit_bill_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:hint="@string/dialog_hint_name" />
    </LinearLayout>


    <CheckBox
        android:id="@+id/dialog_check_bill_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertNameRepeat"
        android:textSize="16sp" />
</LinearLayout>