<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="match_parent"
    android:id="@+id/linear_info"
    android:background="@drawable/dialog_info_pur_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="7dp"
            android:text="@string/txt_date"
            android:textColor="@color/spec_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="date"
            android:textColor="@color/spec_black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="7dp"
            android:text="@string/txt_type"
            android:textColor="@color/spec_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="type"
            android:textColor="@color/spec_black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="7dp"
                android:text="@string/txt_code"
                android:textColor="@color/spec_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/info_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="code"
                android:textColor="@color/spec_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="7dp"
                android:text="@string/txt_name"
                android:textColor="@color/spec_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name"
                android:textColor="@color/spec_black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_from_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="7dp"
            android:text="@string/txt_from"
            android:textColor="@color/spec_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="from"
            android:textColor="@color/spec_black"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_to_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="7dp"
            android:text="@string/txt_to"
            android:textColor="@color/spec_black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="to"
            android:textColor="@color/spec_black"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="7dp"
                android:text="@string/txt_cash"
                android:textColor="@color/spec_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/info_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cash"
                android:textColor="@color/spec_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="7dp"
                android:text="@string/txt_currency"
                android:textColor="@color/spec_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/info_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="currency"
                android:textColor="@color/spec_black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="7dp"
            android:text="@string/txt_total"
            android:textColor="@color/spec_black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/info_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="total"
            android:textColor="@color/spec_black"
            android:textSize="19sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="7dp"
            android:text="@string/txt_final"
            android:textColor="@color/spec_black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/info_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="final"
            android:textColor="@color/spec_black"
            android:textSize="19sp" />
    </LinearLayout>
</LinearLayout>