<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_background"
    android:layoutDirection="locale"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="1dp"
        android:background="@color/dark_gray"
        android:weightSum="10">

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/white"
            android:gravity="left"
            android:text="Date"
            android:textColor="@color/dark_gray"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/white"
            android:gravity="right"
            android:text="Time"
            android:textColor="@color/dark_gray"
            android:textSize="19sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_expense_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:theme="@style/TextLabel7">

        <EditText
            android:id="@+id/edit_new_expense_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_new_expense_c"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:theme="@style/TextLabel7">

            <EditText
                android:id="@+id/edit_new_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_new_expense"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel7">

        <EditText
            android:id="@+id/edit_new_expense_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_new_folder"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel7">

        <EditText
            android:id="@+id/edit_new_expense_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_new_pt_statement" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_expense_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:theme="@style/TextLabel7">

            <EditText
                android:id="@+id/edit_new_expense_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_new_payment_amount"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@drawable/spinner_bg_expense"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spin_new_currency_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="29dp"
                android:layout_height="33dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@mipmap/drop" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_new_expense"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/dialogNegative"
            android:theme="@style/CancelButton" />

        <Button
            android:id="@+id/save_new_expense"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/dialogPositiveSave"
            android:theme="@style/AddNewExpense" />
    </LinearLayout>
</LinearLayout>